# IceWars_Bot

./: .dockerignore  .gitignore  Dockerfile  config.example.toml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: docker.yml
icewars_bot/: actions.py  auth.py  bot.py  browser.py  config.py  cooldown.py  credentials.py  dashboard.py  db.py  goals.py  main.py  planets_store.py  scraper.py  state.py  strategy.py  task_state.py  telegram.py
icewars_bot/static/: dashboard.html
scripts/: live_inspect.py
tests/: conftest.py  test_auth.py  test_bot_notifications.py  test_building_scoring.py  test_cooldown.py  test_db.py  test_economy.py  test_goals.py  test_pause.py  test_state.py  test_storage.py  test_strategy.py
