[metadata]
name = icewars-bot
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    playwright>=1.44
    tomli>=2.0; python_version < "3.11"

[options.extras_require]
dev =
    pytest>=8.0
    pytest-asyncio>=0.23

[options.entry_points]
console_scripts =
    icewars-bot = icewars_bot.main:main
    icewars-dashboard = icewars_bot.dashboard:main
